--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -34,6 +34,8 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
